build: add sidebare components

--- a/src/app/Layout/layout.module.css
+++ b/src/app/Layout/layout.module.css
@@ -12,5 +12,5 @@
         padding: 20px 0px;
         gap: 20px;
         border-top: 1px solid var(--color-gray-light);
-        color: var(--color-gray-light);
+        color: var(--color-gray);
 }
