--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,11 +17,11 @@
   padding: 0;
   margin: 0;
 }
-.text-gray-light {
+.text-grey-light {
   color: var(--color-gray-light);
 }
 
-.text-gray {
+.text-grey {
   color: var(--color-gray);
 }
 
@@ -100,7 +100,7 @@ a {
 .text-medium {
   font-size: var(--size-text-medium);
 }
-.text-gray {
+.text-grey {
   color: var(--color-gray);
 }
 
