--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,27 @@
+@font-face {
+    font-family: 'Gilroy Light';
+    src: url('../app/fonts/Gilroy-Light.woff') format('truetype');
+}
+
+@font-face {
+    font-family: 'Gilroy Regular';
+    src: url('../app/fonts/Gilroy-Regular.woff') format('truetype');
+}
+
+@font-face {
+    font-family: 'Gilroy Bold';
+    src: url('../app/fonts/Gilroy-Bold.woff') format('truetype');
+}
+
+@font-face {
+    font-family: 'Gilroy Bold';
+    src: url('../app/fonts/Gilroy-Medium.woff') format('truetype');
+}
+
+@font-face {
+    font-family: 'Gilroy Bold';
+    src: url('../app/fonts/Gilroy-Heavy.woff') format('truetype');
+}
 :root {
   --max-width: 1100px;
   --color-gray-light: #e3e3e4;
@@ -10,6 +34,12 @@
   --size-list-text: 13px;
   --size-text-sm: 11px;
   --size-text-title-h4: 24px;
+  --font-gilroy-light: 'Gilroy Light', sans-serif;
+  --font-gilroy-regular: 'Gilroy Regular', sans-serif;
+  --font-gilroy-bold: 'Gilroy Bold', sans-serif;
+  --font-gilroy-heavy: 'Gilroy Heavy', sans-serif;
+  --font-gilroy-medium: 'Gilroy Medium', sans-serif;
+  
 }
 
 * {
@@ -20,8 +50,6 @@
 .text-gray-light {
   color: var(--color-gray-light);
 }
-
-
 
 .text-gray {
   color: var(--color-gray);
@@ -44,6 +72,9 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  font-family: var(--font-gilroy-light);
+  color:var(--color-gray);
+                                                
 }
 .main {
   width: 100%;
